--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,38 @@
 	<classpathentry kind="lib" path="pdfbox-2.0.19.jar"/>
 	<classpathentry kind="lib" path="commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="commons-text-1.8.jar"/>
+	<classpathentry kind="lib" path="morfologik-fsa-2.1.3.jar"/>
+	<classpathentry kind="lib" path="morfologik-fsa-builders-2.1.3.jar"/>
+	<classpathentry kind="lib" path="morfologik-stemming-2.1.3.jar"/>
+	<classpathentry kind="lib" path="morfologik-tools-2.1.3.jar"/>
+	<classpathentry kind="lib" path="opennlp-brat-annotator-1.9.2.jar"/>
+	<classpathentry kind="lib" path="opennlp-morfologik-addon-1.9.2.jar"/>
+	<classpathentry kind="lib" path="opennlp-tools-1.9.2.jar"/>
+	<classpathentry kind="lib" path="opennlp-uima-1.9.2.jar"/>
+	<classpathentry kind="lib" path="osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="aopalliance-repackaged-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="jackson-annotations-2.8.4.jar"/>
+	<classpathentry kind="lib" path="grizzly-framework-2.3.28.jar"/>
+	<classpathentry kind="lib" path="grizzly-http-2.3.28.jar"/>
+	<classpathentry kind="lib" path="grizzly-http-server-2.3.28.jar"/>
+	<classpathentry kind="lib" path="hk2-api-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="hk2-utils-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="jackson-core-2.8.4.jar"/>
+	<classpathentry kind="lib" path="jackson-databind-2.8.4.jar"/>
+	<classpathentry kind="lib" path="jackson-jaxrs-base-2.8.4.jar"/>
+	<classpathentry kind="lib" path="jackson-jaxrs-json-provider-2.8.4.jar"/>
+	<classpathentry kind="lib" path="jackson-module-jaxb-annotations-2.8.4.jar"/>
+	<classpathentry kind="lib" path="javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="javax.inject-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="jersey-client-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-common-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-container-grizzly2-http-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-entity-filtering-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-guava-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-media-jaxb-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-media-json-jackson-2.25.jar"/>
+	<classpathentry kind="lib" path="jersey-server-2.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
